Replaced process builder with runtime.exec